namespace factustock.Enums
{
    public enum BillingCycle
    {
        Monthly,
        Yearly
    }
}
