namespace factustock.Enums
{
    public enum ClientType
    {
        Individual,
        Company
    }
}
