namespace factustock.Enums
{
    public enum NotificationType
    {
        InvoiceOverdue,
        InvoiceDueSoon,
        LowStock,
        PaymentReceived,
        System
    }
}
