namespace factustock.Enums
{
    public enum PaymentMethod
    {
        Cash,
        BankTransfer,
        Cheque,
        CIB,
        Edahabia
    }
}
