
namespace factustock.Enums
{
    public enum StockMovementType
    {
        In,
        Out,
        Adjustment
    }
}
