namespace factustock.Enums
{
    public enum SubscriptionStatus
    {
        Active,
        Suspended,
        Cancelled,
        Trial
    }
}
